# pseudo

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: output.json
app/src/androidTest/java/io/pcess/trajectory_optimization/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists_unix.txt  collocation_constraints.h  constants.h  constraint.h  control_rate_constraints.h  cout.h  custom_types.h  dynamics.m  dynamics_constraints.h  equality_constraint.h  fused_constraint.h  inequality_constraint.h  initial_state_constraints.h  jacobian_utils.h  main.cpp  problem_data.h  smooth_control_constraints.h  utils.h  variable_getter.h  waypoint_constraint.h  waypoint_constraints.h
app/src/main/java/io/pcess/trajectory_optimization/: MainActivity.java  SplashActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/pcess/trajectory_optimization/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: keystore.jks
